--- a/.env
+++ b/.env
@@ -1,3 +1,26 @@
-THEME=https://raw.githubusercontent.com/seanwcom/Red-Graphite-for-Obsidian/HEAD/theme.css
-BASE_THEME=dark
+SITE_NAME_HEADER=lpaiu study
+SITE_MAIN_LANGUAGE=kr
+SITE_BASE_URL=https://lpaiu-study.vercel.app/
+SHOW_CREATED_TIMESTAMP=true
+TIMESTAMP_FORMAT=yyyy-MM-dd h:mm a
+SHOW_UPDATED_TIMESTAMP=true
+NOTE_ICON_DEFAULT=
+NOTE_ICON_TITLE=false
+NOTE_ICON_FILETREE=false
+NOTE_ICON_INTERNAL_LINKS=false
+NOTE_ICON_BACK_LINKS=false
+STYLE_SETTINGS_CSS=
+STYLE_SETTINGS_BODY_CLASSES=
+USE_FULL_RESOLUTION_IMAGES=false
+THEME=https://raw.githubusercontent.com/mrglitchbyte/obsidian_everforest/HEAD/theme.css
+BASE_THEME=light
 dgHomeLink=true
+dgPassFrontmatter=false
+dgShowBacklinks=false
+dgShowLocalGraph=true
+dgShowInlineTitle=true
+dgShowFileTree=true
+dgEnableSearch=true
+dgShowToc=true
+dgLinkPreview=false
+dgShowTags=false
