--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "prebuild": "rimraf site",
+        "prebuild": "rimraf dist",
         "start": "npm-run-all get-theme build:sass --parallel watch:*",
         "watch:sass": "sass --watch src/site/styles:site/styles",
         "watch:eleventy": "cross-env ELEVENTY_ENV=dev eleventy --serve",
