--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "prebuild": "rimraf dist",
         "start": "npm-run-all get-theme build:sass --parallel watch:*",
-        "watch:sass": "sass --watch src/site/styles:site/styles",
+        "watch:sass": "sass --watch src/site/styles:src/site/styles",
         "watch:eleventy": "cross-env ELEVENTY_ENV=dev eleventy --serve",
         "build:eleventy": "cross-env ELEVENTY_ENV=prod NODE_OPTIONS=--max-old-space-size=4096 eleventy",
-        "build:sass": "sass src/site/styles:site/styles --style compressed",
+        "build:sass": "sass src/site/styles:src/site/styles --style compressed",
         "get-theme": "node src/site/get-theme.js",
         "build": "npm-run-all get-theme build:*"
     },
