--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,10 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      PATH_PREFIX: "/lpaiu-study"   # 사용자 페이지가 아니라면 필수. 루트면 "".
+      ELEVENTY_ENV: "prod"
+      NODE_OPTIONS: "--max-old-space-size=4096"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
